using Godot;
using System;

[GlobalClass]
public partial class EnemyInteractionData : NPCInteractionData
{
    [Export] public float meleeDamage = 2.0f;
}