using Godot;
using System;

[GlobalClass]
public partial class NPCInteractionData : InteractionData
{

}