using Godot;
using System;

[GlobalClass]
public partial class PlayerInteractionData : InteractionData
{

}
